crates/noaa-weather-summary/tests/snapshots/products__product_summary_snapshot.snap
---
source: crates/noaa-weather-summary/tests/products.rs
expression: "decode::<TextProduct>(PRODUCT).summarize(&SummaryOptions::default())"
---
title: NWS text product
subtitle: ABV — Rawinsonde Data Above 100 Millibars
emphasis: None
sections:
  - Facts:
      heading: ~
      facts:
        - label: ID
          key: id
          also: []
          value:
            Identifier: dcfd78a0-561b-423e-9fd6-889455b8c535
          emphasis: None
        - label: WMO Collective ID
          key: wmoCollectiveId
          also: []
          value:
            Identifier: UFUS42
          emphasis: None
        - label: Issuing Office
          key: issuingOffice
          also: []
          value:
            Identifier: KTBW
          emphasis: None
        - label: Issuance Time
          key: issuanceTime
          also: []
          value:
            Timestamp: "2026-09-28T00:00:00+00:00"
          emphasis: None
        - label: Product Code
          key: productCode
          also: []
          value:
            Identifier: ABV
          emphasis: None
        - label: Product Name
          key: productName
          also: []
          value:
            Text: Rawinsonde Data Above 100 Millibars
          emphasis: None
  - Prose:
      heading: Product text
      key: productText
      text: "000\nUFUS42 KTBW 280000\nABVTBW\n72210 TTCC  78005 72210 70885 63568 08015 50092 60975 11517\n88999 77999 31313 45408 82341=\n \nTTDD  7800/ 72210 11979 69961 22878 65563 33859 65763 44810\n64764 55675 63169 66639 64370 77601 64571 88478 59376 99444\n60176 11411 59778 22379 583// 21212 11990 08508 22975 07005\n33960 02507 44944 36008 55929 05003 66914 10001 77899 36003\n88885 33002 99857 24009 11831 28515 22807 33010 33795 01507\n44771 11504 55759 09505 66748 10508 77736 11508 88725 11006\n99713 07508 11677 10024 22667 11521 33634 14521 44611 13014\n55588 10016 66577 11512 77565 10009 88543 07014 99508 11520\n11484 09514 22475 08518 33467 09018 44458 09015 55450 07516\n66432 10017 77408 06527 88401 07028 99387 05524 11379 05527\n31313 45408 82341 51515 10164 00050 10194 22005 23508=\n \nPPDD  78008 72210 95678 02507 10001 33002 959// 28515 96012\n33510 10508 07508 96456 11521 14521 10016 96789 10009 07014\n11520 97012 11016 09018 07516 97345 10017 07028 05527=\n\n\nNNNN"
notes: []
